--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@
 				line-height: 180px;
 				width: 1200px;
 				margin: auto;
-				background: url(img/7_03.jpg) no-repeat center;
+				background: url(../img/7_03.jpg) no-repeat center;
 				margin-bottom: 20px;
 			}
 			.head_nav{
